# Dano

./: .dockerignore  .env.example  .gitignore  .npmrc  AGENTS.md  CONTEXT-MAP.md  CONTEXT.md  Dockerfile  README.md  config.yaml.example  dano.config.json  docker-compose.yml  environment.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  requirements.txt  skills-lock.json  start-dano.bat  tsconfig.json  vitest.config.ts
Playwright/: package-lock.json  package.json  pyproject.toml
Playwright/src/dano_recording/: __init__.py  app.py  bootstrap.py  capability_planner.py  capture_store.py  enum_resolver.py  evidence_graph.py  executability.py  field_inference.py  field_registry.py  flow_migration.py  header_contracts.py  pi_semantic_ops.py  review_advice.py  value_evidence.py
Playwright/src/dano_recording/analysis/: __init__.py  field_resolver.py  materializer.py  relation_builder.py  request_classifier.py  request_lifecycle.py  transaction_segmenter.py
Playwright/src/dano_recording/api/: __init__.py  auth.py  decision_commands.py  events.py  protocol.py  sessions.py  websocket.py
Playwright/src/dano_recording/capture/: __init__.py  action_transactions.py  diagnostics.py  (+10 more)
Playwright/tests/: test_business_generalization.py  test_capture.py  test_capture_pi_redteam.py  test_capture_value_boundary.py  test_client_projection.py  test_compiler_pipeline.py  test_core_contracts_security.py  test_domain_fields.py  test_evidence.py  test_inference_graph_planner.py  test_memory_repository.py  test_package_boundaries.py  test_persistence_release_lifecycle.py  test_pi_semantic_executability.py  test_pipeline_contract_integration.py  test_postgres_repository.py  test_recording_application.py  test_runtime_publish.py  test_start_dano_launcher.py  test_v3_command_identity.py
(+679 files in other folders)
